namespace eShopX.Domain.Aggregates.Shipments;

public enum LogisticsSubType
{
    // 超商
    UNIMART,  // 7-11
    FAMI,     // 全家
    HILIFE,   // 萊爾富
    // 宅配
    TCAT,     // 黑貓宅急便
    POST      // 中華郵政
}
